--- a/SamacSysLibs/JVER_Installed.yaml
+++ b/SamacSysLibs/JVER_Installed.yaml
@@ -1,7 +1,12 @@
 Installed:
-  ATTINY424-SSF:
-  STM32G474CEU3: True
-  ATTINY3217-MFR: True
-  ATTINY25-20SSU: True
-  ATMEGA32U4RC-AUR: True
-  STM32G050C8T6: True
+  SRR5228A-100M: True
+  RT6274CHGJ6F: True
+  M20-7832046: True
+  S2B-PH-SM4-TB_LF__SN_: True
+  EEV227M016S9MAA: True
+  865090449009: True
+  ERB-RE2R00V: True
+  ESDA18-1K: True
+  SRN6045-2R2Y: True
+  SMAJ6.0A-13-F: True
+  SRP7028CC-100M: True
