--- a/SamacSysLibs/JVER_Installed.yaml
+++ b/SamacSysLibs/JVER_Installed.yaml
@@ -12,3 +12,20 @@ Installed:
   SRP7028CC-100M: True
   SF-1206HH20M-2: True
   0407006.WR: True
+  STM32F446RET6: True
+  M20-9990645: True
+  ESD5Z3.3T5G: True
+  MLG1005S20NHT000: True
+  AT24CSW040-STUM-T: True
+  DMN63D8L-7: True
+  CLY6D-FKC-CK1N1D1BB7D3D3: True
+  UJ2-BH-W1-TH: True
+  BWCU00321619102M02: True
+  PESD2USB3UVT-QR: True
+  150060AS75000: True
+  150060GS75000: True
+  ATA6561-GAQW-N: True
+  SRF4532-110Y: True
+  B3B-PH-K-S_LF__SN_: True
+  TSW-102-06-T-S: True
+  SNT-100-BK-G: True
