Added Vex components

--- a/SamacSysLibs/JVER_Installed.yaml
+++ b/SamacSysLibs/JVER_Installed.yaml
@@ -30,3 +30,15 @@ Installed:
   TSW-102-06-T-S: True
   SNT-100-BK-G: True
   951103-8622-AR: True
+  LSM6DS3TR-C: True
+  PKLCS1212E2400-R1: True
+  NSS30101LT1G: True
+  ECS-80-8-33B2Q-CVY-TR3: True
+  LMR50410Y5FQDBVRQ1: True
+  IFSC1616AHER4R7M01: True
+  SF-0603SP050-2: True
+  PTVS13VS1UR-QX: True
+  MLZ2012N4R7LT000: True
+  865080442004: True
+  BZT52C5V6-TP: True
+  TLV1117LV33DCYR: True
