Added more parts

--- a/SamacSysLibs/JVER_Installed.yaml
+++ b/SamacSysLibs/JVER_Installed.yaml
@@ -42,3 +42,15 @@ Installed:
   865080442004: True
   BZT52C5V6-TP: True
   TLV1117LV33DCYR: True
+  TMC6200-TA: True
+  IHLP3232DZER4R7M11: True
+  0679L8000-05: True
+  EEE-FT1H331AP: True
+  STM32G0B1CBT3: True
+  RF4E100AJTCR: True
+  TSM080N03EPQ56_RLG: True
+  RUM001L02T2CL: True
+  1707865: True
+  CSNL1206FT20L0: True
+  LM321LVIDCKR: True
+  39-30-6087: True
