--- a/SamacSysLibs/JVER_Installed.yaml
+++ b/SamacSysLibs/JVER_Installed.yaml
@@ -54,3 +54,8 @@ Installed:
   CSNL1206FT20L0: True
   LM321LVIDCKR: True
   39-30-6087: True
+  LM339BIPWR: True
+  LM339LVPWR: True
+  ESD5Z5.0T5G: True
+  MLZ1608A2R2MT: True
+  ESD9P5.0ST5G: True
