Added Embedded_AoC parts

--- a/SamacSysLibs/JVER_Installed.yaml
+++ b/SamacSysLibs/JVER_Installed.yaml
@@ -61,3 +61,25 @@ Installed:
   ESD9P5.0ST5G: True
   SM15T15A: True
   STM32C071GBU6: True
+  STM32H7A3LIH6Q: True
+  IS61WV20488FBLL-10BLI: True
+  IS67WVE4M16EBLL-70BLA1: True
+  IS66WVE4M16EBLL-70BLI-TR: True
+  ECS-160-12-30BQ-ADS-TR: True
+  PRT-10811: True
+  1206L075_16WR: True
+  ADP2302ARDZ-3.3-R7: True
+  SSB43L-E3_5BT: True
+  B82464G4472M: True
+  SRN8040TA-6R8M: True
+  P4SMAJ12A: True
+  PESD2USB5UXT-QR: True
+  TST-110-01-F-D: True
+  MSD-1-A: True
+  67996-100HLF: True
+  STM32H7A3ZIT6: True
+  AS6C6416-55TIN: True
+  STM32H7A3ZIT6Q: True
+  STM32H533ZET6: True
+  150060GS83000: True
+  TS20-42-25-WT-160-SMT-TR: True
